# dotfiles

./: .gitignore  .gitmodules  README.md  RMakevars  Renviron  Rprofile  Xdefaults  Xmodmap  Xresources  agignore  alacritty.yml  ansiweatherrc  archey4.json  bashrc  bira-mod.zsh-theme  cava  compton.conf  conda_setup.sh  condarc  conkyrc  cookiecutterrc  ctags  dir_colors  dircolors  fonts.conf  ghci.conf  gitconfig  gitignore_global  gtk.css  gtkrc-2.0  gtkrc-3.0  i3  i3status  interrobangrc  justfile  lintr  ls++.conf  mimeapps.list  noctalia.md  nvimrc  (+26 more)
applescripts/: iterm2-new.scpt
awesome/: rc.lua  rc.lua.backup  wi.lua
byobu/: keybindings.tmux
cheat/: ag  anki  bash-programming  conf.yml  couchdb  curl  docker  firefox  git  igraph.md  javascript  numpy  pacman  pandas  python  regex  sklearn
cheats/: 3d-force-graph  ag  anki  bash-programming  conda  couchdb  docker  dplyr  fd  feh  find  git  groups  ipython  javascript  join  jsx  kitty  lynx  make  mimeopen  nginx  numpy  pandas  pmap  python  qutebrowser  sed  snakemake  tar  usermod  vim  zsh
cheatsheets/: awk  aws-cli  bash-programming  bitwig  bluetoothctl  celery  claude  conda  coredumpctl  couchdb  cpp  css  csvkit  curl  cursor  d3  dig  docker  docker-compose  docker-node  du  fcitx  fd  ffmpeg  find  font-config  gh  gimp  git  git-worktree  glsl  grub  haskell  haskell-ghci  i3  imagemagick  ip  jack  javascript  javascript-drei  (+108 more)
conky/: bargraph_small.lua  draw_bg.lua  helioviewer_status.py
crush/: crush.json
cursor/: keybindings.json  settings.json
devilspie/: DesktopConsole.ds
(+679 files in other folders)
